# cairn

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml   add v0.6.0 release note; ci harden pip-audit and pin actions to SHAs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_proposal.yml
.github/rulesets/: README.md  main-protection.json  tag-protection.json
.github/rulesets/org/: README.md  branch-protection.json  push-protection.json  tag-protection.json
.github/workflows/: ci.yml  codeql.yml  release.yml
brand/: BRAND-GUIDE.md
docs/: air-gapped.md  architecture.md  configuration.md  coverage.md  merge-and-security-policy.md  pricing.md  rules.md
examples/: README.md
examples/azure/: vulnerable.tf
examples/clean/: main.tf
examples/gcp/: vulnerable.tf
examples/kubernetes/: clean.yaml  vulnerable.yaml
examples/policy/: .cairn.yaml
examples/suppressed/: main.tf
examples/vsphere/: clean.tf  vulnerable.tf
examples/vulnerable/: main.tf
releases/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.5.md  v0.5.0.md  v0.5.1.md  v0.6.0.md
scripts/: generate_rules_doc.py
src/cairn/: __init__.py  audit.py  autofix.py  cli.py  costs.py  drift.py  editions.py  engine.py  findings.py  graph.py  kubernetes.py  llm.py  policy.py  pricing.py  providers.py  terraform.py
src/cairn/packs/: cost-guard.yaml  strict-security.yaml
src/cairn/report/: __init__.py  console.py  html.py  json_report.py  markdown.py  proposal.py  sarif.py
src/cairn/rules/: __init__.py  _helpers.py  azure.py  base.py  cost.py  gcp.py  governance.py  kubernetes.py  reliability.py  security.py  vsphere.py
tests/: conftest.py  test_audit.py  test_autofix.py  test_cli.py  test_costs.py  test_coverage.py  test_drift.py  test_editions.py  test_engine.py  test_findings.py  test_fuzz_parser.py  test_graph.py  test_kubernetes.py  test_llm.py  test_packs.py  test_plugins.py  test_policy.py  test_propose.py  test_providers.py  test_reports.py  test_rules_cost.py  test_rules_security.py  test_suppressions.py  test_terraform.py
