[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-iac"
version = "0.6.0"
description = "Local-first IaC auditor that fuses cost and security findings in a single pass — and writes the fix, not just the flag."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cairn Maintainers" }]
keywords = [
  "terraform", "iac", "security", "finops", "cost", "devsecops",
  "static-analysis", "scanner", "local-first",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "python-hcl2>=4.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-PyYAML",
  "hypothesis>=6.100",
  "cyclonedx-bom>=4.0",
]

[project.urls]
Homepage = "https://github.com/cairn-oss/cairn"
Documentation = "https://github.com/cairn-oss/cairn/tree/main/docs"
Changelog = "https://github.com/cairn-oss/cairn/blob/main/CHANGELOG.md"
Issues = "https://github.com/cairn-oss/cairn/issues"

[project.scripts]
cairn = "cairn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cairn = ["py.typed", "packs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S", "RUF"]
ignore = [
  "S101", # assert in tests is fine; src has no asserts for control flow
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
mypy_path = "src"
packages = ["cairn"]

[[tool.mypy.overrides]]
module = "hcl2.*"
ignore_missing_imports = true
